--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -57,7 +57,7 @@
                     </a>
                   </div>
                   <div class="project-text">
-                    Vaulted ceilings in the main level in condo 1
+                    Vaulted ceilings in the main level in our first condo
                   </div>
                 </div>
               </article>
@@ -74,7 +74,7 @@
                     </a>
                   </div>
                   <div class="project-text">
-                    Looking up from the main living area in condo 2
+                    Looking up from the main living area in our second condo
                   </div>
                 </div>
               </article>
@@ -109,7 +109,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Master bedroom in 3 bedroom with walkout to balcony
+                  Master bedroom in first 4 bedroom condo with walkout to balcony
                 </div>
               </div>
             </article>
@@ -126,7 +126,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Master bedroom in 4 bedroom with walkout to balcony
+                  Master bedroom in our second 4 bedroom condo with walkout to balcony
                 </div>
               </div>
             </article>
@@ -198,7 +198,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Granite countertops and cherry cabinets in 2nd condo kitchen
+                  Granite countertops and cherry cabinets in second condo kitchen
                 </div>
               </div>
             </article>
@@ -228,29 +228,12 @@
             <article class="col-md-3 project" data-tags="interior,secondlevel">
               <div class="project-item-isotope">
                 <div class="project-image">
-                  <a href="{{ media }}img/gallery/booksfuton.jpg" class="popup-link" title="Upper level futon and books for guests to read">
-                    <img src="{{ media }}img/gallery/booksfutonsmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Upper level futon and books for guests to read in 3 bedroom condo
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
                   <a href="{{ media }}img/gallery/BTO2upperliving.jpg" class="popup-link" title="Upper level futon and books for guests to read">
                     <img src="{{ media }}img/gallery/BTO2upperlivingsmall.jpg" alt="sdf">
                   </a>
                 </div>
                 <div class="project-text">
-                  Upper level living area for guests in 4 bedroom condo
+                  Upper level living area for guests in our second 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -267,7 +250,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Upper level game table for guests in 4 bedroom condo
+                  Upper level game table for guests in second 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -284,7 +267,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Your first view upon entering our 3 bedroom condo
+                  Your first view upon entering our first 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -301,7 +284,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Main floor living room with balcony in our 4 bedroom condo
+                  Main floor living room with balcony in our second 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -318,7 +301,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Elevator up to 2nd condo level from parking lot
+                  Elevator up to our second condo level from parking lot
                 </div>
               </div>
             </article>
@@ -342,24 +325,6 @@
           </li>
         <!-- Portfolio Item End -->
 
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/stairsupperliving.jpg" class="popup-link" title="Second level living area">
-                    <img src="{{ media }}img/gallery/stairsupperlivingsmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Second level living area in the 3 bedroom condo
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
         <!-- Portfolio Item -->
           <li>
             <article class="col-md-3 project" data-tags="interior,mainlevel">
@@ -370,7 +335,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Main living area sofa sleeper with balcony views in 1st condo
+                  Main living area sofa sleeper with balcony views in our first condo
                 </div>
               </div>
             </article>
@@ -405,7 +370,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Looking down from upper level in the 4 bedroom condo
+                  Looking down from upper level in our second condo
                 </div>
               </div>
             </article>
@@ -423,7 +388,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Upper level bedroom in the 3 bedroom condo
+                  One of the upper level bedrooms in our first 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -440,7 +405,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  An upper level bedroom in the 4 bedroom condo
+                  An upper level bedroom in our second 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -459,23 +424,6 @@
                 </div>
                 <div class="project-text">
                   Early sunrise over Tablerock Lake from our balcony
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/leatherchairs.jpg" class="popup-link" title="Leather chairs for reading or watching TV">
-                    <img src="{{ media }}img/gallery/leatherchairssmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Leather chairs for reading or watching TV in the 3 bedroom condo
                 </div>
               </div>
             </article>
@@ -510,7 +458,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Dining area in the 3 bedroom condo
+                  Dining area in our first condo
                 </div>
               </div>
             </article>
@@ -544,7 +492,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Entering the front door of the 3 bedroom condo
+                  Entering the front door of our first condo
                 </div>
               </div>
             </article>
@@ -596,7 +544,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Game table, games in the closet in the 1st condo
+                  Game table, games in the closet in our first condo
                 </div>
               </div>
             </article>
@@ -647,7 +595,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  View from inside looking out at the Tablerock Lake
+                  View from inside looking out at Table Rock Lake
                 </div>
               </div>
             </article>
@@ -664,7 +612,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Fully equipped kitchen with new appliances in the 3 bedroom condo
+                  Fully equipped kitchen with new appliances in our first condo
                 </div>
               </div>
             </article>
@@ -698,7 +646,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Second bedroom on the main level in the 3 bedroom condo
+                  Second bedroom on the main level in our first 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -732,7 +680,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Master bedroom in the 3 bedroom condo with en suite
+                  Master bedroom in our first 4 bedroom condo with en suite
                 </div>
               </div>
             </article>
@@ -766,7 +714,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Main living area with large TV in the 3 bedroom condo
+                  Main living area with large TV in our first condo
                 </div>
               </div>
             </article>
@@ -783,7 +731,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  The view from the main living area looking out at the lake in the 2nd condo
+                  The view from the main living area looking out at the lake in our second condo
                 </div>
               </div>
             </article>
@@ -885,24 +833,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Front door from inside
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/gametablefuton.jpg" class="popup-link" title="Game table, futon, and reading material">
-                    <img src="{{ media }}img/gallery/gametablefutonsmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Game table, futon, and reading material in the 3 bedroom condo
+                  Front door from inside our first condo
                 </div>
               </div>
             </article>
@@ -970,7 +901,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Main level 2nd bedroom in condo 2
+                  Main level 2nd bedroom in our second condo
                 </div>
               </div>
             </article>
@@ -1005,7 +936,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Seating and stairs going up in the 3 bedroom condo
+                  Seating and stairs going up in our first 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -1022,7 +953,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Dining area with vaulted ceiling and lake views in the 3 bedroom condo
+                  Dining area with vaulted ceiling and lake views in our first condo
                 </div>
               </div>
             </article>
@@ -1056,25 +987,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Upper level bedroom with pocket doors in the 2nd condo
-                </div>
-              </div>
-            </article>
-          </li>
-        <!-- Portfolio Item End -->
-
-
-        <!-- Portfolio Item -->
-          <li>
-            <article class="col-md-3 project" data-tags="interior,secondlevel">
-              <div class="project-item-isotope">
-                <div class="project-image">
-                  <a href="{{ media }}img/gallery/fullsleepersofa.jpg" class="popup-link" title="Full sleeper sofa on second level">
-                    <img src="{{ media }}img/gallery/fullsleepersofasmall.jpg" alt="sdf">
-                  </a>
-                </div>
-                <div class="project-text">
-                  Full sleeper sofa on second level in the 3 bedroom condo
+                  Upper level bedroom with pocket doors in our second condo
                 </div>
               </div>
             </article>
@@ -1263,7 +1176,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Cross over from the parking lot to one flight of stairs up to the 3 bedroom condo
+                  Cross over from the parking lot to one flight of stairs up to our first 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -1280,7 +1193,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  One flight of stairs up from the parking lot to the 3 bedroom condo
+                  One flight of stairs up from the parking lot to our first 4 bedroom condo
                 </div>
               </div>
             </article>
@@ -1501,7 +1414,7 @@
                   </a>
                 </div>
                 <div class="project-text">
-                  Dawn Awaits over Table Rock Lake
+                  Dawn awaits over Table Rock Lake
                 </div>
               </div>
             </article>
@@ -1520,14 +1433,14 @@
     <a href="http://www.vrbo.com/686045/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
         <p>
-          12 Person / 3 Bedroom Condo
+          12 Person / 4 Bedroom Condo / Our First Condo
         </p>
     </a>
 
     <a href="http://www.vrbo.com/1023371/">
         <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
         <p>
-          12 Person / 4 Bedroom Condo
+          12 Person / 4 Bedroom Condo / Our Second Condo
         </p>
     </a>
 
